# Cache_modelling

./: .gitignore  CMakeLists.txt  README.md  cache_model.cpp  cache_model.h  main.cpp
apps/: run_experiments.cpp
include/cache/: cache_model.h  memory.h  replacement_policy.h  storage.h  types.h
python/: plotter.py
src/: cache_model.cpp
